Add classmap for composer

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,7 @@
 {
   "name": "alchemy/phpshortener",
-  "version": "master"
+  "version": "master",
+  "autoload": {
+    "classmap": ["./"]
+  }
 }
